# sb1-amebaslk

./: .env  Anchor.toml  Cargo.toml  README.md  jest.config.js  package-lock.json  package.json
programs/solana-casino/: Cargo.toml
programs/solana-casino/src/: errors.rs  lib.rs
programs/solana-casino/src/instructions/: betting.rs  blackjack.rs  blackjack_actions.rs  blackjack_insurance.rs  blackjack_split.rs  crash.rs  dealer_turn.rs  dice.rs  draw_card.rs  global_blackjack.rs  hilo.rs  keno.rs  mines.rs  player_actions.rs  plinko.rs  roulette.rs  roulette_bets.rs  settlement.rs  start_new_round.rs
programs/solana-casino/src/state/: balance.rs  blackjack.rs  crash.rs  dice.rs  global_blackjack.rs  hilo.rs  keno.rs  mines.rs  plinko.rs  roulette.rs  roulette_bets.rs
programs/solana-casino/src/utils/: cards.rs  game_checks.rs  payout.rs  vrf.rs
src/: App.tsx
src/components/: Navbar.tsx  WalletProvider.tsx  index.ts
src/constants/: index.ts
src/hooks/: index.ts  useAgent.ts  useAgentSocial.ts  useAuth.ts  useBalance.ts  useBlackjack.ts  useBlackjackGame.ts  useBlockTimer.ts  useCrashGame.ts  useDiceGame.ts  useGameSubscription.ts  useGameTiming.ts  useGameTransactions.ts  useHiloGame.ts  useKenoGame.ts  usePlinkoGame.ts  useProgram.ts  useRouletteGame.ts  useSubscription.ts  useUBI.ts
src/lib/: index.ts  stripe.ts
src/pages/: Agents.tsx  Baccarat.tsx  Blackjack.tsx  Crash.tsx  Dashboard.tsx  Dice.tsx  HiLo.tsx  Home.tsx  Keno.tsx  Mines.tsx  Plinko.tsx  Roulette.tsx
src/types/: card.ts  crash.ts  dice.ts  game.ts  (+2 more)
tests/: casino.ts  setup.ts  timing.ts
(+131 files in other folders)
