[package]
name = "solana-casino"
version = "0.1.0"
description = "Solana Casino - Decentralized gambling with transparent odds"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_casino"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
solana-program = "1.18"